@@ -43,6 +43,7 @@ public class Starter
 			params.add("java");
 			params.add("-Xmx" + memory + "m");
 			params.add("-Xms" + memory + "m");
+			params.add("-XX:MaxPermSize=128m");
 			params.add("-Dfile.encoding=UTF-8");
 			if(System.getProperty("os.name").toLowerCase().startsWith("mac"))
 			{
